--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <div class="media">
             <ul>
                 <li><video src="/videos/video1.mp4" autoplay controls muted></video></li>
-                <li><img src="/images/img01.jpg" alt="Foto 01"></li>
-                <li><img src="/images/img02.jpg" alt="Foto 02"></li>
-                <li><img src="/images/img03.jpg" alt="Foto 03"></li>
+                <li><img src="/images/img01.jpg" alt="Foto 01" /></li>
+                <li><img src="/images/img02.jpg" alt="Foto 02" /></li>
+                <li><img src="/images/img03.jpg" alt="Foto 03" /></li>
                 
             </ul>
         </div>
