fix: relative path to images and resources

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <h2>Feliz ano novo, amor. Muita felicidade, amor, paz, sucesso e muito mais nós vivendo momentos incríveis em 2018. Se a música não começar automaticamente, dá play aí!</h2>
 
-            <audio src="music/dengo.mp3" autoplay controls muted></audio>
+            <audio src="./music/dengo.mp3" autoplay controls muted></audio>
         </div>
     </header>
 
@@ -31,18 +31,18 @@
         </div>
         <div class="media">
             <ul>
-                <li><video src="/videos/video1.mp4" autoplay controls muted></video></li>
-                <li><img src="/images/img01.jpg" alt="Foto 01"></li>
-                <li><img src="/images/img02.jpg" alt="Foto 02"></li>
-                <li><img src="/images/img03.jpg" alt="Foto 03"></li>
+                <li><video src="./videos/video1.mp4" autoplay controls muted></video></li>
+                <li><img src="./images/img01.jpg" alt="Foto 01"></li>
+                <li><img src="./images/img02.jpg" alt="Foto 02"></li>
+                <li><img src="./images/img03.jpg" alt="Foto 03"></li>
                 
             </ul>
         </div>
         <div class="media">
             <ul>
-                <li><img src="/images/img04.jpg" alt="Foto 04"></li>
-                <li><img src="/images/img05.jpg" alt="Foto 05"></li>
-                <li><img src="/images/img06.jpg" alt="Foto 06"></li>
+                <li><img src="./images/img04.jpg" alt="Foto 04"></li>
+                <li><img src="./images/img05.jpg" alt="Foto 05"></li>
+                <li><img src="./images/img06.jpg" alt="Foto 06"></li>
             </ul>
         </div>
         <div class="text">
@@ -53,18 +53,18 @@
         <div class="media">
             <ul>
                 <li>
-                    <video src="/videos/video2.mp4" autoplay controls muted></video>
+                    <video src="./videos/video2.mp4" autoplay controls muted></video>
                 </li>
-                <li><img src="/images/img07.jpg" alt="Foto 07"></li>
-                <li><img src="/images/img08.jpg" alt="Foto 08"></li>
-                <li><img src="/images/img09.jpg" alt="Foto 09"></li>
+                <li><img src="./images/img07.jpg" alt="Foto 07"></li>
+                <li><img src="./images/img08.jpg" alt="Foto 08"></li>
+                <li><img src="./images/img09.jpg" alt="Foto 09"></li>
             </ul>
         </div>
         <div class="media">
             <ul>
-                <li><img src="/images/img10.jpg" alt="Foto 10"></li>
-                <li><img src="/images/img11.jpg" alt="Foto 11"></li>
-                <li><img src="/images/img12.jpg" alt="Foto 12"></li>
+                <li><img src="./images/img10.jpg" alt="Foto 10"></li>
+                <li><img src="./images/img11.jpg" alt="Foto 11"></li>
+                <li><img src="./images/img12.jpg" alt="Foto 12"></li>
             </ul>
         </div>
         <div class="text">
@@ -74,22 +74,22 @@
         </div>
         <div class="media">
             <ul>
-                <li><video src="/videos/video3.mp4" autoplay controls muted></video></li>
-                <li><img src="/images/img13.jpg" alt="Foto 13"></li>
-                <li><img src="/images/img14.jpg" alt="Foto 14"></li>
+                <li><video src="./videos/video3.mp4" autoplay controls muted></video></li>
+                <li><img src="./images/img13.jpg" alt="Foto 13"></li>
+                <li><img src="./images/img14.jpg" alt="Foto 14"></li>
             </ul>
         </div>
         <div class="media">
             <ul>
-                <li><img src="/images/img15.jpg" alt="Foto 15"></li>
-                <li><img src="/images/img16.jpg" alt="Foto 16"></li>
-                <li><img src="/images/img17.jpg" alt="Foto 17"></li>
+                <li><img src="./images/img15.jpg" alt="Foto 15"></li>
+                <li><img src="./images/img16.jpg" alt="Foto 16"></li>
+                <li><img src="./images/img17.jpg" alt="Foto 17"></li>
             </ul>
         </div>
         <div class="media">
             <ul>
-                <li><img src="/images/img18.jpg" alt="Foto 18"></li>
-                <li><img src="/images/img19.jpg" alt="Foto 19"></li>
+                <li><img src="./images/img18.jpg" alt="Foto 18"></li>
+                <li><img src="./images/img19.jpg" alt="Foto 19"></li>
             </ul>
         </div>
         <div class="text">
