fix: correct css path

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 
     <title>Ano Novo em Estilo</title>
 </head>
@@ -19,7 +19,7 @@
 
             <h2>Feliz ano novo, amor. Muita felicidade, amor, paz, sucesso e muito mais nós vivendo momentos incríveis em 2018. Se a música não começar automaticamente, dá play aí!</h2>
 
-            <audio src="music/dengo.mp3" autoplay controls muted></audio>
+            <audio src="./music/dengo.mp3" autoplay controls muted></audio>
         </div>
     </header>
 
